Adjusting the XML and making the https request